# repo_template

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/newproject/: __init__.py  cli.py  logging_config.py  readme_tree.py
src/newproject/io/: storage.py
